# axum-postgres-form

./: Cargo.toml  README.md
migrations/: 20260428095139_name_email_table.sql  20260520000000_add_image_path_column.sql
src/: main.rs  tests.rs
templates/: form-page.html  index.html  server-error.html
