[package]
name = "aksama_db_pracs"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.6"
axum = { version = "0.8.9", features = ["macros"] }
dotenvy = "0.15.7"
mime = "0.3.17"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "tls-rustls"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }

[dev-dependencies]
headers = "0.4.1"
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
